[package]
name = "axum_error_example"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/avandecreme/axum-error-example"
description = "Error handling with axum example"
keywords = ["axum", "error", "example"]

[[bin]]
name = "axum_error_example"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros"] }
derive_more = { version = "2.0.1", features = ["display", "from"] }
enum_convert = "0.2.0"
env_logger = "0.11.8"
log = "0.4.28"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["serde", "v7"] }
